--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "All the code and data related to the FH Potsdam Münzkabinett Project.",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=dev webpack-dev-server --devtool source-map --progress --colors --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,20 @@
   "homepage": "https://github.com/Flave/Muenzkabinett#readme",
   "dependencies": {
     "d3": "^4.4.0",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "pixi.js": "^4.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
+    "node-sass": "^4.3.0",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
