--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "homepage": "https://github.com/Flave/Muenzkabinett#readme",
   "dependencies": {
     "d3": "^4.4.0",
+    "hogan.js": "^3.0.2",
     "lodash": "^4.17.2",
-    "pixi.js": "^4.3.2"
+    "lodash.template": "^4.4.0",
+    "pixi.js": "^4.3.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -30,6 +34,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "node-sass": "^4.3.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
