--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   "homepage": "https://github.com/Flave/Muenzkabinett#readme",
   "dependencies": {
     "d3": "^4.4.0",
+    "gsap": "^1.19.1",
     "hogan.js": "^3.0.2",
     "lodash": "^4.17.2",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.find": "^4.6.0",
+    "lodash.findindex": "^4.6.0",
+    "lodash.foreach": "^4.5.0",
+    "lodash.remove": "^4.7.0",
     "lodash.template": "^4.4.0",
     "pixi.js": "^4.3.2",
     "react": "^15.4.2",
