--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.find": "^4.6.0",
     "lodash.findindex": "^4.6.0",
     "lodash.foreach": "^4.5.0",
+    "lodash.groupby": "^4.6.0",
     "lodash.remove": "^4.7.0",
     "lodash.template": "^4.4.0",
     "pixi.js": "^4.3.2",
