--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash.template": "^4.4.0",
     "pixi.js": "^4.3.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "victor": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
