added layout selection

--- a/app/templates/coinTooltip.template
+++ b/app/templates/coinTooltip.template
@@ -1,2 +1,3 @@
 <div class="tooltip__title"><%= title %></div>
 <div class="tooltip__subtitle"><%= date_earliest %> until <%= date_latest %></div>
+<div class="tooltip__data"><%= selectedProperty %></div>
