--- a/app/templates/ui.template
+++ b/app/templates/ui.template
@@ -1,4 +1,4 @@
-<div class="ui__section ui-tabs" id="tabs"></div>
+<div class="ui-tabs" id="tabs"></div>
 <div class="ui__section ui-taglist" id="attributes"></div>
-<div class="ui__section ui-selection" id="attribute-selection"></div>
+<div class="ui__section" id="layouts"></div>
 <span class="ui__toggle"><%= toggle %></span>
